# meta_reader

./: .gitignore  Cargo.toml  README.md  file_to_index.bat  long_to_short.bat  test  test.c  test64
src/: lib.rs  main.rs
src/cmd/: cli.rs  cli_process.rs  commands.rs  evidence.rs  handler.rs  mod.rs
src/file_struct/: elf.rs  mod.rs
src/file_struct/bitlocker/: mod.rs
src/file_struct/elf/: elf32.rs  elf64.rs  elf_pub.rs  mod.rs
src/file_struct/ext4/: ext4_impl.rs  fs_impl.rs  group_descriptor_impl.rs  inode_table_impl.rs  journal_impl.rs  mod.rs
src/file_struct/ntfs/: bitmap_impl.rs  fs_impl.rs  journal_impl.rs  mft_impl.rs  mod.rs  ntfs_impl.rs
src/file_struct/pe/: pe.rs
src/file_struct/vmdk/: mod.rs
src/file_struct/windows/: mod.rs
src/file_struct/windows/registry/: mod.rs  reg_impl.rs
src/file_struct/xfs/: mod.rs
src/modules/: mod.rs
src/modules/cmd/: handler.rs  mod.rs
src/modules/ext4/: find_deleted_files.rs  journal_recover_file.rs  list_deleted_files.rs  list_files.rs  list_journal_recoverable.rs  list_recoverable_inodes.rs  mod.rs  read_file.rs  search_deleted_files.rs  search_disk.rs  search_recoverable_files.rs
src/modules/ntfs/: deleted_files.rs  dump_usn.rs  mod.rs  search_disk.rs  search_files_content.rs  search_usn.rs  stat.rs
src/utils/: error.rs  file.rs  funcs.rs  mod.rs
