[package]
name = "meta_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
num = "0.2"
chrono = "0.4.23"
sigpipe = "0.1.3"
guid = "0.1.0"
rust-lzxpress = "0.7.1"
base64 = "0.13.1"
indicatif = "0.17.1"
md5 = "0.7.0"
regex = "1.7.1"
memchr = { version = "2", default-features = false }
colored = "2.0.0"
log = "0.4.0"