[package]
name = "meta_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
num = "0.2"
chrono = "0.4.23"
sigpipe = "0.1.3"
rust-lzxpress = "0.7.1"
base64 = "0.13.1"
indicatif = "0.17.1"
md5 = "0.7.0"
regex = "1.7.1"
memchr = { version = "2", default-features = false }
colored = "2.0.0"
log = "0.4.0"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
clap = { version = "4.5.4", features = ["derive"] }


[profile.release]
strip = true
